feat: add ZGC nightly gates and retire legacy GC benches
Wire wjsm-gc-bench compare --duration and nightly single-heap selection,
nightly gate hard-isolation/duration/ceiling checks, and zgc-nightly
workflow with fail-closed preflight. Delete gc_stress / zgc_autoresearch /
zgc_barrier_pressure; point autoresearch.sh at wjsm-gc-bench.

JDK normalized 30-sample GREEN and 4/16 GiB large-runner GREEN remain
needs-verification / needs-resource-runner until instrumented JDK 25 and
named isolation runners are available.